# tokenforge

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
core/: Cargo.toml
core/src/: bench.rs  lib.rs  main.rs  mcp_server.rs  setup.rs
core/src/compress/: code.rs  conversation.rs  diff.rs  json.rs  mcp.rs  mod.rs  output.rs
core/src/context/: budget.rs  manager.rs  mod.rs  store.rs
core/src/learning/: mod.rs  patterns.rs  profile.rs
core/src/quality/: scorer.rs
core/src/utils/: mod.rs  tokens.rs  treesitter.rs
hooks/: compress-output.sh
plugin/: tool.json
scripts/: build.sh  install.sh
skills/tokenforge/: SKILL.md
