[package]
name = "tokenforge"
version = "0.2.0"
edition = "2021"
description = "TokenForge — Full-stack LLM token optimization engine"
license = "MIT"

[[bin]]
name = "tokenforge"
path = "src/main.rs"

[lib]
name = "tokenforge"
path = "src/lib.rs"

[dependencies]
# AST parsing — core
tree-sitter = "0.24"
# AST parsing — language grammars (0.23.x series targets tree-sitter ^0.24)
tree-sitter-rust       = "0.23"
tree-sitter-python     = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parallelism
rayon = "1.8"

# Text processing
regex = "1"

# Compression (storage)
zstd = "0.13"

# Token counting
tiktoken-rs = "0.6"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
blake3 = "1"

# Semantic diff (lossless diff-based compression)
diffy = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
